update link to point at preview->master

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
 Tue, Jun 23, 2020  8:16:23 PM -- document travis with jekyll + pytest
 Tue, Jun 23, 2020  8:25:29 PM -- reverse blog posts on home page
+Tue, Jun 23, 2020  8:34:43 PM -- update link to point at preview->master
